# sim-storage

./: BROCHURE.md  CONTRIBUTING.md  Cargo.toml  README.md  features.toml  release-plz.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/sim-list-cell/: BROCHURE.md  Cargo.toml  README.md
crates/sim-list-cell/src/: backend.rs  citizen.rs  cons.rs  lib.rs  tests.rs
crates/sim-list-lazy/: BROCHURE.md  Cargo.toml  README.md
crates/sim-list-lazy/src/: backend.rs  citizen.rs  iter.rs  lazy.rs  lib.rs  tests.rs
crates/sim-table-db/: BROCHURE.md  Cargo.toml  README.md
crates/sim-table-db/src/: capabilities.rs  citizen.rs  db_dir.rs  lib.rs  tests.rs
crates/sim-table-fs/: BROCHURE.md  Cargo.toml  README.md
crates/sim-table-fs/recipes/: book.toml
crates/sim-table-fs/recipes/01-basics/: chapter.toml
crates/sim-table-fs/recipes/01-basics/grep-tree/: purpose.md  recipe.toml  setup.siml
crates/sim-table-fs/recipes/01-basics/read-edit-file/: purpose.md  recipe.toml  setup.siml
crates/sim-table-fs/src/: capabilities.rs  citizen.rs  dir_edit.rs  find.rs  fs_dir.rs  lib.rs  roadmap11.rs  tests.rs
crates/sim-table-fs/src/fs_dir/: leaf_io.rs
crates/sim-table-fs/src/tests/: artifacts.rs  authority.rs  citizen.rs  find.rs  support.rs  table.rs
crates/sim-table-hash/: BROCHURE.md  Cargo.toml  README.md
crates/sim-table-hash/src/: backend.rs  citizen.rs  hash.rs  lib.rs  tests.rs
crates/sim-table-http/: BROCHURE.md  Cargo.toml  README.md
crates/sim-table-http/recipes/: book.toml
crates/sim-table-http/recipes/01-basics/: chapter.toml
crates/sim-table-http/recipes/01-basics/http-get/: purpose.md  recipe.toml  setup.siml
crates/sim-table-http/src/: capabilities.rs  citizen.rs  http_dir.rs  lib.rs  options.rs  tests.rs  transport.rs
crates/sim-table-lazy/: BROCHURE.md  Cargo.toml  README.md
crates/sim-table-lazy/src/: backend.rs  citizen.rs  lazy.rs  lib.rs  tests.rs
crates/sim-table-mount/: BROCHURE.md  Cargo.toml  README.md
crates/sim-table-mount/recipes/: book.toml
crates/sim-table-mount/recipes/01-basics/: chapter.toml
crates/sim-table-mount/recipes/01-basics/backend-composition/: purpose.md  recipe.toml  setup.siml
crates/sim-table-mount/src/: capabilities.rs  lib.rs  mount_dir.rs  ops.rs  routing.rs  tests.rs
crates/sim-table-override/: BROCHURE.md  Cargo.toml  README.md
crates/sim-table-override/src/: class.rs  install.rs  lib.rs  override_table.rs  tests.rs
docs/agents/: card-index.json  cards.jsonl
docs/diagrams/src/: README.md
docs/humans/: README.md
xtask/src/: file_sizes.rs  main.rs
