[package]
name = "sim-table-fs"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "SIM workspace package for sim table fs."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-storage"
homepage = "https://github.com/sim-nest/sim-storage"

[dependencies]
globset = { version = "0.4" }
regex = { version = "1" }
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-codec = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-midi-shapes = { version = "0.1.0", optional = true }
sim-lib-midi-smf = { version = "0.1.0", optional = true }
sim-lib-music-core = { version = "0.1.0", optional = true }
sim-lib-music-notation = { version = "0.1.0", optional = true }
sim-lib-music-shapes = { version = "0.1.0", optional = true }
sim-lib-pitch-core = { version = "0.1.0", optional = true }
sim-lib-sound-core = { version = "0.1.0", optional = true }
sim-lib-sound-shapes = { version = "0.1.0", optional = true }
sim-lib-sound-tuning = { version = "0.1.0", optional = true }
sim-table-core = { version = "0.1.0" }

[dev-dependencies]
sim-codec-algol = { version = "0.1.0" }
sim-codec-binary = { version = "0.1.0" }
sim-codec-binary-base64 = { version = "0.1.0" }
sim-codec-chat = { version = "0.1.0" }
sim-codec-json = { version = "0.1.0" }
sim-codec-lisp = { version = "0.1.0" }
sim-kernel = { version = "0.1.0", features = ["test-support"] }
sim-test-support = { version = "0.1.0" }

[features]
default = []
midi = ["dep:sim-lib-midi-shapes", "dep:sim-lib-midi-smf"]
music = ["dep:sim-lib-music-core", "dep:sim-lib-music-shapes"]
notation = ["dep:sim-lib-music-core", "dep:sim-lib-music-notation", "dep:sim-lib-music-shapes"]
sound = ["dep:sim-lib-sound-core", "dep:sim-lib-sound-shapes"]
tuning = ["dep:sim-lib-pitch-core", "dep:sim-lib-sound-core", "dep:sim-lib-sound-shapes", "dep:sim-lib-sound-tuning"]

[lints]
workspace = true
