[package]
name = "sim-table-http"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Capability-gated HTTP table directory backend for SIM."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-storage"
homepage = "https://github.com/sim-nest/sim-storage"

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
rustls-native-certs = { version = "0.8", optional = true }
sim-citizen = { version = "0.1.0" }
sim-citizen-derive = { version = "0.1.0" }
sim-codec = { version = "0.1.0" }
sim-cookbook = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-net-core = { version = "0.1.4" }
sim-table-core = { version = "0.1.1" }

[build-dependencies]
sim-cookbook = { version = "0.1.0" }

[dev-dependencies]
sim-codec-lisp = { version = "0.1.0" }
sim-kernel = { version = "0.1.0", features = ["test-support"] }
sim-test-support = { version = "0.1.0" }

[features]
default = []
tls = ["dep:rustls", "dep:rustls-native-certs"]

[lints]
workspace = true
