[package]
name = "sim-table-mount"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Mounted Table and Dir namespace backend for SIM."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-storage"
homepage = "https://github.com/sim-nest/sim-storage"

[dependencies]
sim-cookbook = { version = "0.1.3" }
sim-kernel = { version = "0.1.4" }
sim-table-core = { version = "0.1.2", git = "https://github.com/sim-nest/sim-foundation", rev = "3ac9fb759bf4b13ddee76145b7e5809f080e8efa" }

[build-dependencies]
sim-cookbook = { version = "0.1.3" }

[dev-dependencies]
sim-kernel = { version = "0.1.4", features = ["test-support"] }
sim-table-db = { version = "0.1.1" }
sim-test-support = { version = "0.1.0" }

[lints]
workspace = true
